[package]
name = "march-sq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.12.0"
winit="0.26.1"
pollster="0.2.5"
bytemuck={ version="1.7.3", features = ["derive"] }
game-loop={ version="0.8.2", features = ["window"] }
rand="0.8.4"